# KubeFS

./: Cargo.toml  Makefile  Readme.md
src/: fs.rs  inode.rs  kube.rs  kube_client.rs  main.rs
