[package]
name = "kubefs"
version = "0.1.0"
authors = ["AzureUser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
fuse = "0.3.1"
kube = "0.35.1"
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8.0", features = ["v1_18"] }
libc = "0.2.51"
time = "0.1"
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
anyhow = "1.0.31"

